# SmartOpinion

./: Dockerfile  README.md  app.py  pyproject.toml  setup_everything.py
data/datasets/: fewshot_examples_chatgpt.json  test_dataset_argument_evidence_extraction.xlsx
data/referendums/20210047/: InitialSituation.txt  Proceedings.txt  all_data.xlsx
data/referendums/20210063/: InitialSituation.txt  Proceedings.txt  all_data.xlsx
data/referendums/20210067/: InitialSituation.txt  Proceedings.txt  all_data.xlsx
data/referendums/20210501/: InitialSituation.txt  Proceedings.txt  all_data.xlsx
data/referendums/20220036/: InitialSituation.txt  Proceedings.txt  all_data.xlsx
data/referendums/20220043/: InitialSituation.txt  Proceedings.txt  all_data.xlsx
data/referendums/20220046/: InitialSituation.txt  Proceedings.txt  all_data.xlsx
data/referendums/20220054/: InitialSituation.txt  Proceedings.txt  all_data.xlsx
data/referendums/20220075/: InitialSituation.txt  Proceedings.txt  all_data.xlsx
data/smart_opinion_default_collection/21017ca1-4a93-4c8b-8648-bf1b17296632/: index_metadata.pickle
data/smart_opinion_default_collection/81b16834-fc73-439a-bd7f-fa6ebd964b38/: index_metadata.pickle
models/deepset_gbert-large_stance_classifier/: config.json
opinion_analyzer/: __init__.py  analyzer.py
opinion_analyzer/configs/: config.yaml  model_client_config.yaml
opinion_analyzer/data_handler/: create_chromadb_database.py  data_handler.py  prompt_database.py  prompt_templates.py
opinion_analyzer/inference/: client_handler.py
opinion_analyzer/utils/: helper.py  log.py
scripts/: ausgangslage.txt  data_preparation.py
scripts/evaluation/: evaluate.py  evaluate_argument_evidence_extraction.py
scripts/training/: train_arg_classifier_dspy.py  train_arg_classifier_textgrad.py  train_model.py
scripts/translation/: translate.py
