[tool.poetry]
name = "opinion_analyzer"
version = "0.1.0"
description = "Code for the Innocheck Project SmartOpinion"
authors = ["Veton Matoshi"]
license = "Not specified yet."

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.43.1"
swissparlpy = "0.3.0"
pandas = "^2.2.2"
requests = "2.32.3"
beautifulsoup4 = "4.12.3"
openpyxl = "3.1.5"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
